<resources>
    <string name="app_name">Сырный Теремок</string>

    <string name="email">alexei@gmail.com</string>
    <string name="title_login">Войти</string>
    <string name="et_hint_email_id">Почта</string>
    <string name="et_hint_password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="btn_lbl_login">Войти</string>
    <string name="dont_have_accoutn">Нет аккаунта</string>
    <string name="register">Регистрация</string>

    <string name="create_an_account">Создать Аккаунт</string>
    <string name="name">Ваше Имя</string>
    <string name="telefone">Номер телефона</string>
    <string name="company">Имя организации</string>
    <string name="password">Пароль</string>
    <string name="i_agree_to_the_terms_and_conditon">Принимаю условия пользования</string>

    <string name="err_company">Имя организации не введено</string>
    <string name="err_name">Имя не введено</string>
    <string name="err_email">Почта не введена</string>
    <string name="err_password">Пароль не введен</string>
    <string name="err_checked">Нажмите галочку - принимаю условию пользования</string>
    <string name="try_save_database">Данные введены правильно</string>
    <string name="please_wait">Подождите…</string>
    <string name="you_are_logged">Вы вошли в систему</string>

    <string name="token">token</string>
    <string name="title_login_forgot">Забыли пароль?</string>
    <string name="new_password">Восстановить пароль</string>
    <string name="email_resent">На вашу почту отправлена иструкция по восстановлени пароля</string>
    <string name="tlf">Телефон</string>
    <string name="err_tlf">Неправильный номер телефона</string>
    <string name="male">Жен</string>
    <string name="fem">Муж</string>
    <string name="read_storage_permission_denied">Просмотр хранилища запрещен</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="exit">Нажмите для выхода</string>
    <string name="you_are_registered">Вы успешно зарегистрировались!</string>
    <string name="empty"> </string>
    <string name="email_sent">На вашу почту отправлено письмо для восстановления пароля!</string>
    <string name="email_empty">Пароль пуст</string>
    <string name="save">Сохранить</string>
    <string name="you_are_have_permission_to_read">Вы разрешаете простмотр изображений для добавления их в приложение</string>
    <string name="you_dont_have">Взапретили доступ к хранилищу и не можете загружать изображения</string>
    <string name="error_ocurried">Произошла ошибка</string>
    <string name="data_updated">Данные обновлены</string>
    <string name="your_image_uploaded">Изображние загружено</string>
    <string name="title_activity_top_nav">TopNav</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="please_click">Нажмите еще раз для выхода</string>
    <string name="description">Настоящие продукты</string>
    <string name="cor">Кор</string>
    <string name="web">Сайт</string>
    <string name="my_accoutn">Мой Аккаунт</string>
    <string name="my_orders">Мои заказы</string>
    <string name="site">Сайт</string>
    <string name="admin">Админ</string>
    <string name="title_activity_tab_top">TabTopActivity</string>
    <string name="enter_admin">Админ</string>
    <string name="email_admin">Почта</string>
    <string name="password_admin">Пароль</string>
    <string name="administrator">Администратор</string>
    <string name="create_categories">Создать категории товаров</string>
    <string name="name_category">Имя категории</string>
    <string name="save_cat">Сохранить</string>
    <string name="cat_empty">Пусто</string>
    <string name="add">Добавить</string>
    <string name="product">Продукт</string>
    <string name="delete_category">Удалить категорию или добавить ее товары</string>
    <string name="delete">Удалить категорию</string>
    <string name="add_product">Добавить продукт</string>
    <string name="all_products">Всего продуктов:</string>
    <string name="category">"Категория: "</string>
    <string name="delete_this_category">Удалить категорию</string>
    <string name="delete_this_category_description">Удаляя категорию ее продукты не удаляются</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="start_deleting">Процесс удаления категории</string>
    <string name="name_product">Название продукта</string>
    <string name="description_product">Описание продукта</string>
    <string name="price_product">Цена продукта в целых числах</string>
    <string name="choose_action">Выберите действие</string>
    <string name="list_product">Товары</string>
    <string name="admin_options">Опции Администратора</string>
    <string name="add_product_caegory">Добавить категорию и продукт</string>
    <string name="list_client">Список клиентов</string>
    <string name="list_orders">Список заказов</string>

    <drawable name="actionbar_background">#00FFFF</drawable>
    <string name="title_activity_tab_options">TabOptionsActivity</string>
    <string name="add_caegory_and_product">Добавить категорию и товары</string>
    <string name="category_name">Введите имя категории</string>
    <string name="get_me_name_category">Введите имя категоарии</string>
    <string name="saving">Сохранение</string>
    <string name="start_deleting_user">Процесс удаления</string>
    <string name="for_add_products_to_batterf">Для добавления товаров в корзину, пожалуйста, заполните свой профиль</string>
    <string name="my_perfil">Мой профиль</string>
    <string name="need_datas">Нужно ввести фото, организацию, имя и телефон</string>
    <string name="saved">Сохранено</string>
    <string name="edit_user">Изменить</string>
    <string name="menos">-</string>
    <string name="more">+</string>
    <string name="add_to_basket">Добавить в корзину</string>
</resources>