<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:id="@+id/scrol_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <FrameLayout
        android:layout_marginTop="33dp"
        android:id="@+id/fl_header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:scaleType="fitCenter"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/chees" />
    </FrameLayout>

    <TextView
        android:textStyle="bold"
        android:id="@+id/tv_title"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_login"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/title_textSize"
        />

            <!-- style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@android:color/darker_gray">
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:ignore="LabelFor,TextFields"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_password"
        android:textColorHint="@android:color/darker_gray">
        <EditText
            tools:ignore="LabelFor,TextFields"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_gravity="end"
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/forgot_passwotd_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <Button
        android:id="@+id/btn_login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:gravity="center"
        android:text="@string/btn_lbl_login"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryText"
        />

    <LinearLayout
        android:layout_marginBottom="63dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="italic"
            android:id="@+id/tv_dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/clickable_text_view_padding"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/dont_have_accoutn"
            android:textSize="@dimen/lbl_text_view_textSize" />
        <TextView
            android:textStyle="bold"
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/clickable_text_view_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/lbl_text_view_textSize"
            android:text="@string/register" />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>