<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        style="@android:style/Widget.Holo.Light.ActionBar"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        app:subtitleTextColor="@color/colorPrimaryText"
        >
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_product"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/product"
                />
            <EditText
                android:inputType="textMultiLine"
                android:hint="@string/name_product"
                android:maxLines="2"
                android:layout_marginTop="22dp"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="44dp"
                android:id="@+id/name_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <EditText
                android:inputType="textMultiLine"
                android:maxLines="11"
                android:hint="@string/description_product"
                android:layout_marginTop="22dp"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="44dp"
                android:id="@+id/description_product"
                tools:ignore="LabelFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

            <EditText
                android:hint="@string/price_product"
                android:layout_marginTop="22dp"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="44dp"
                android:inputType="number"
                tools:ignore="LabelFor"
                android:id="@+id/price_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/save_new_product"
                android:backgroundTint="@color/colorPrimary"
                android:layout_gravity="end"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="44dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>