<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_activitys.AdminOptionActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="44dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:padding="11dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/add_product_caegory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="44dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:padding="11dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/list_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="44dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:padding="11dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/list_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>