<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".admin_activitys.AdminLoginActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginTop="90dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:inputType="text"
            android:hint="@string/email_admin"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="LabelFor,TextFields" />
        <EditText
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:ems="11"
            android:inputType="text"
            android:hint="@string/password_admin"
            tools:ignore="LabelFor" />
        <com.google.android.material.button.MaterialButton
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"
            android:id="@+id/enter_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/enter_admin"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</ScrollView>